# api/openapi/post/post.yml
@@ -9,7 +9,54 @@ servers:
       hostname:
         default: localhost
 paths:
+  /sort/new/{post}:
+      get:
+        summary: Основнвая страница
+        operationId: getAllPost
+        parameters:
+          - name: post
+            in: path
+            description: Номер поста в отсортированной бд, от нового к старому.
+            required: true
+            schema:
+              type: string
+        responses:
+          '200':
+            description: Объявления получены.
+            content:
+              application/json:
+                 schema:
+                   $ref: '#/components/schemas/Post'
+          '204':
+            description: Были просмотренны все объявления.
+  
+          default:
+            description: Произошла ошибка.
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ErrorHTTP'
   /post:
+    get:
+      summary: Вернуть посты авторизированного пользователя.
+      operationId: getPost
+      responses:
+        '200':
+          description: Объявление получено.
+          content:
+            application/json:
+               schema:
+                 type: array
+                 items:
+                    oneOf:
+                      - $ref: '#/components/schemas/Post'
+        default:
+          description: Произошла ошибка.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorHTTP'
+  
     post:
       summary: Создать новое объявление.
       operationId: createPost
@@ -18,7 +65,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreatePost'
+              $ref: '#/components/schemas/Post'
       responses:
         '201':
           description: Объявление успешно создано.
@@ -30,18 +77,18 @@ paths:
                 $ref: '#/components/schemas/ErrorHTTP'
   /post/{id}:
     get:
-      summary: Вернуть пользователя по id.
-      operationId: findUserByID
+      summary: Вернуть объявление по id.
+      operationId: findPostByID
       parameters:
         - name: id
           in: path
-          description: ID пользователя.
+          description: ID объявления.
           required: true
           schema:
             type: string
       responses:
         '200':
-          description: Пользователь получен.
+          description: Объявление получено.
           content:
             application/json:
               schema:
@@ -53,12 +100,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorHTTP'
     put:
-      summary: Обновить пользователя.
+      summary: Обновить объявление.
       operationId: updatePost
       parameters:
         - name: id
           in: path
-          description: ID пользователя.
+          description: ID объявления.
           required: true
           schema:
             type: string
@@ -70,7 +117,7 @@ paths:
               $ref: '#/components/schemas/Post'
       responses:
         '200':
-          description: Пользователь успешно обновлён.
+          description: Объявление успешно обновлено.
           content:
             application/json:
               schema:
@@ -82,11 +129,100 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorHTTP'
     delete:
-      summary: Удалить пользователя.
-      operationId: deleteUser
+      summary: Удалить объявление.
+      operationId: deletePost
+      parameters:
+        - name: id
+          in: path
+          description: ID объявления.
+          required: true
+          schema:
+            type: string
       responses:
         '204':
-          description: Поьзователь удалён.
+          description: Пользователь удалён.
+        default:
+          description: Произошла ошибка.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorHTTP'
+  /close/{id}:
+    put:
+      summary: Закрыть объявление.
+      operationId: closePost
+      parameters:
+        - name: id
+          in: path
+          description: ID объявления.
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Объявление успешно обновлено.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+        default:
+          description: Произошла ошибка.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorHTTP'
+  /cart:
+    get:
+      summary: Вернуть корзину товаров.
+      operationId: getShopingCart
+      responses:
+        '200':
+          description: Корзина получена.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  oneOf:
+                    - $ref: '#/components/schemas/PostId'
+        default:
+          description: Произошла ошибка.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorHTTP'
+    post:
+      summary: Добавить товар в корзину.
+      operationId: addCart
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PostId'
+      responses:
+        '201':
+          description: Товар успешно добвавлен.
+        default:
+          description: Произошла ошибка.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorHTTP'
+  /cart/{id}:
+    delete:
+      summary: Убрать товар из корзины.
+      operationId: removeCart
+      parameters:
+        - name: id
+          in: path
+          description: ID объявления.
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Объявление удалено.
         default:
           description: Произошла ошибка.
           content:
@@ -98,71 +234,47 @@ components:
     Post:
       allOf:
         - required:
-            - Email
-            - Login
-            - PhoneNumber
-            - SecondName
-            - Patronimic
-            - FirstName
-            - Password
-            - PasswordCheck
-            - Avatar
+            - Title
+            - Description
+            - Price
+            - Close
+            - ImageMassive
           properties:
-            Email:
+            Title:
               type: string
-              description: Email пользователя.
-            Login:
+              description: Названия объявления.
+            Description:
               type: string
-              description: Логин пользователя.
-            PhoneNumber:
+              description: Содержание объявления.
+            Price:
               type: string
-              description: Логин пользователя.
-            SecondName:
-              type: string
-              description: Фамилия пользователя.
-            FirstName:
-              type: string
-              description: Имя пользователя.
-            Patronimic:
-              type: string
-              description: Отчество пользователя.
-            Password:
-              type: string
-              description: Пароль пользователя.
-            PasswordCheck:
-              type: string
-              description: Проверка пароля пользователя.
-            Avatar:
-              type: string
-              description: Аватар пользователя.
-    GetUser:
+              description: Цена объявления.
+            Close:
+              type: boolean
+              description: Закрыто ли объявление.
+            ImageMassive:
+              $ref: '#/components/schemas/ImageMassive'
+              
+    ImageMassive:
+      type: array
+      items:
+        oneOf:
+          - required:
+              - Image
+            properties:
+              Image: 
+                type: string
+                description: Изображение объявления.
+                
+    PostId:
       allOf:
         - required:
-            - ID
-            - PhoneNumber
-            - SecondName
-            - FirstName
-            - Patronimic
-            - Avatar
+            - Id
           properties:
-            ID:
+            Id:
               type: string
-              description: Логин пользователя.
-            PhoneNumber:
-              type: string
-              description: Логин пользователя.
-            SecondName:
-              type: string
-              description: Фамилия пользователя.
-            FirstName:
-              type: string
-              description: Имя пользователя.
-            Patronimic:
-              type: string
-              description: Отчество пользователя.
-            Avatar:
-              type: string
-              description: Аватар пользователя.
+              description: Идентификатор объявления.
+            
 
     ErrorHTTP:
       required:
