# internal/post/delivery/http/v2/models.gen.go
@@ -3,35 +3,11 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
 package v2
 
-// CreateUser defines model for CreateUser.
-type CreateUser struct {
-	// Avatar Аватар пользователя.
-	Avatar string `json:"Avatar"`
+import (
+	"encoding/json"
 
-	// Email Email пользователя.
-	Email string `json:"Email"`
-
-	// FirstName Имя пользователя.
-	FirstName string `json:"FirstName"`
-
-	// Login Логин пользователя.
-	Login string `json:"Login"`
-
-	// Password Пароль пользователя.
-	Password string `json:"Password"`
-
-	// PasswordCheck Проверка пароля пользователя.
-	PasswordCheck string `json:"PasswordCheck"`
-
-	// Patronimic Отчество пользователя.
-	Patronimic string `json:"Patronimic"`
-
-	// PhoneNumber Логин пользователя.
-	PhoneNumber string `json:"PhoneNumber"`
-
-	// SecondName Фамилия пользователя.
-	SecondName string `json:"SecondName"`
-}
+	"github.com/deepmap/oapi-codegen/pkg/runtime"
+)
 
 // ErrorHTTP defines model for ErrorHTTP.
 type ErrorHTTP struct {
@@ -42,29 +18,83 @@ type ErrorHTTP struct {
 	Message string `json:"message"`
 }
 
-// GetUser defines model for GetUser.
-type GetUser struct {
-	// Avatar Аватар пользователя.
-	Avatar string `json:"Avatar"`
+// ImageMassive defines model for ImageMassive.
+type ImageMassive = []ImageMassive_Item
 
-	// FirstName Имя пользователя.
-	FirstName string `json:"FirstName"`
-
-	// ID Логин пользователя.
-	ID string `json:"ID"`
-
-	// Patronimic Отчество пользователя.
-	Patronimic string `json:"Patronimic"`
-
-	// PhoneNumber Логин пользователя.
-	PhoneNumber string `json:"PhoneNumber"`
-
-	// SecondName Фамилия пользователя.
-	SecondName string `json:"SecondName"`
+// ImageMassive0 defines model for .
+type ImageMassive0 struct {
+	// Image Изображение объявления.
+	Image string `json:"Image"`
 }
 
-// CreateUserJSONRequestBody defines body for CreateUser for application/json ContentType.
-type CreateUserJSONRequestBody = CreateUser
+// ImageMassive_Item defines model for ImageMassive.Item.
+type ImageMassive_Item struct {
+	union json.RawMessage
+}
 
-// UpdateUserJSONRequestBody defines body for UpdateUser for application/json ContentType.
-type UpdateUserJSONRequestBody = CreateUser
+// Post defines model for Post.
+type Post struct {
+	// Close Закрыто ли объявление.
+	Close bool `json:"Close"`
+
+	// Description Содержание объявления.
+	Description  string       `json:"Description"`
+	ImageMassive ImageMassive `json:"ImageMassive"`
+
+	// Price Цена объявления.
+	Price string `json:"Price"`
+
+	// Title Названия объявления.
+	Title string `json:"Title"`
+}
+
+// PostId defines model for PostId.
+type PostId struct {
+	// Id Идентификатор объявления.
+	Id string `json:"Id"`
+}
+
+// AddCartJSONRequestBody defines body for AddCart for application/json ContentType.
+type AddCartJSONRequestBody = PostId
+
+// CreatePostJSONRequestBody defines body for CreatePost for application/json ContentType.
+type CreatePostJSONRequestBody = Post
+
+// UpdatePostJSONRequestBody defines body for UpdatePost for application/json ContentType.
+type UpdatePostJSONRequestBody = Post
+
+// AsImageMassive0 returns the union data inside the ImageMassive_Item as a ImageMassive0
+func (t ImageMassive_Item) AsImageMassive0() (ImageMassive0, error) {
+	var body ImageMassive0
+	err := json.Unmarshal(t.union, &body)
+	return body, err
+}
+
+// FromImageMassive0 overwrites any union data inside the ImageMassive_Item as the provided ImageMassive0
+func (t *ImageMassive_Item) FromImageMassive0(v ImageMassive0) error {
+	b, err := json.Marshal(v)
+	t.union = b
+	return err
+}
+
+// MergeImageMassive0 performs a merge with any union data inside the ImageMassive_Item, using the provided ImageMassive0
+func (t *ImageMassive_Item) MergeImageMassive0(v ImageMassive0) error {
+	b, err := json.Marshal(v)
+	if err != nil {
+		return err
+	}
+
+	merged, err := runtime.JsonMerge(b, t.union)
+	t.union = merged
+	return err
+}
+
+func (t ImageMassive_Item) MarshalJSON() ([]byte, error) {
+	b, err := t.union.MarshalJSON()
+	return b, err
+}
+
+func (t *ImageMassive_Item) UnmarshalJSON(b []byte) error {
+	err := t.union.UnmarshalJSON(b)
+	return err
+}
