# internal/post/domain/entity.go
@@ -4,12 +4,14 @@ import (
 	"github.com/google/uuid"
 )
 
-type User struct {
-	Id          uuid.UUID
-	Email       Email
-	Login       Login
-	PhoneNumber PhoneNumber
-	Password    Password
-	FullName    FullName
-	Avatar      Avatar
+type Post struct {
+	Id         uuid.UUID
+	UserID     uuid.UUID
+	Close      Close
+	Title      Title
+	Desciption Desciption
+	Price      Price
+	Tags       Tags
+	Images     Images
+	Time       TimeStamp
 }
