# internal/post/domain/object_validate.go
@@ -2,19 +2,13 @@ package domain
 
 import (
 	"encoding/base64"
-	"regexp"
-	"unicode"
 )
 
 type SpecificationManager struct {
-	Email       Specification[string]
-	Login       Specification[string]
-	PhoneNumber Specification[string]
-	Password    Specification[string]
-	FirstName   Specification[string]
-	SecondName  Specification[string]
-	Patronimic  Specification[string]
-	Avatar      Specification[string]
+	Title      Specification[string]
+	Desciption Specification[string]
+	Images     Specification[string]
+	Tags       Specification[string]
 }
 
 type typeSpecification interface {
@@ -25,413 +19,172 @@ type Specification[T typeSpecification] interface {
 	IsValid(verifiable T) error
 }
 
-type PassSpecification struct {
+type TitleSpecification struct {
 	specifications []Specification[string]
 }
 
-func (e PassSpecification) IsValid(pass string) error {
+func (e TitleSpecification) IsValid(title string) error {
 	for _, specification := range e.specifications {
-		if err := specification.IsValid(pass); err != nil {
+		if err := specification.IsValid(title); err != nil {
 			return err
 		}
 	}
 	return nil
 }
 
-type PassAndSpecification struct {
+type TitleAndSpecification struct {
 	specifications []Specification[string]
 }
 
-func (e PassAndSpecification) IsValid(pass string) error {
+func (e TitleAndSpecification) IsValid(title string) error {
 	for _, specification := range e.specifications {
-		if err := specification.IsValid(pass); err != nil {
+		if err := specification.IsValid(title); err != nil {
 			return err
 		}
 	}
 	return nil
 }
 
-type PassLengthValidation struct {
-	maxLength uint
-	minLength uint
-}
-
-func (e PassLengthValidation) IsValid(pass string) error {
-	if e.minLength < uint(len(pass)) && e.maxLength < uint(len(pass)) {
-		return PassMaxLengthErr{e.maxLength}
-	}
-	if e.minLength > uint(len(pass)) && e.maxLength > uint(len(pass)) {
-		return PassMinLengthErr{e.minLength}
-	}
-	return nil
-}
-
-type PassForRuneValidation struct {
-	specifications map[string]Specification[rune]
-}
-
-func (e PassForRuneValidation) IsValid(pass string) error {
-	errSC := e.specifications["SC"].IsValid(rune(pass[0]))
-	errUC := e.specifications["UC"].IsValid(rune(pass[0]))
-	errLC := e.specifications["LC"].IsValid(rune(pass[0]))
-	for _, char := range pass[1:] {
-		if errSC != nil {
-			errSC = e.specifications["SC"].IsValid(char)
-		}
-		if errUC != nil {
-			errUC = e.specifications["UC"].IsValid(char)
-		}
-		if errLC != nil {
-			errLC = e.specifications["LC"].IsValid(char)
-		}
-	}
-	if errSC != nil {
-		return errSC
-	}
-	if errUC != nil {
-		return errUC
-	}
-	if errLC != nil {
-		return errLC
-	}
-	return nil
-}
-
-type passSpecialCharactersValidation struct {
-	specialChar map[rune]bool
-}
-
-func (e passSpecialCharactersValidation) IsValid(char rune) error {
-	if e.specialChar[char] {
-		return nil
-	}
-	return PassSpecialCharactersErr{e.specialChar}
-}
-
-type passUpperCaseValidation struct{}
-
-func (e passUpperCaseValidation) IsValid(char rune) error {
-	if unicode.IsUpper(char) {
-		return nil
-	}
-	return PassUpperCaseErr{}
-}
-
-type passLowerCaseValidation struct{}
-
-func (e passLowerCaseValidation) IsValid(char rune) error {
-	if unicode.IsLower(char) {
-		return nil
-	}
-	return PassLowerCaseErr{}
-}
-
-type EmailSpecification struct {
-	specifications []Specification[string]
-}
-
-func (e EmailSpecification) IsValid(email string) error {
-	for _, specification := range e.specifications {
-		if err := specification.IsValid(email); err != nil {
-			return err
-		}
-	}
-	return nil
-}
-
-type EmailAndSpecification struct {
-	specifications []Specification[string]
-}
-
-func (e EmailAndSpecification) IsValid(email string) error {
-	for _, specification := range e.specifications {
-		if err := specification.IsValid(email); err != nil {
-			return err
-		}
-	}
-	return nil
-}
-
-type EmailRequiredValueValidation struct{}
-
-func (e EmailRequiredValueValidation) IsValid(email string) error {
-	emailRegex := regexp.MustCompile(`^[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,4}$`)
-	if !emailRegex.MatchString(email) {
-		return EmailRequiredValueErr{}
-	} else {
-		return nil
-	}
-}
-
-type PhoneNumberSpecification struct {
-	specifications []Specification[string]
-}
-
-func (e PhoneNumberSpecification) IsValid(number string) error {
-	for _, specification := range e.specifications {
-		if err := specification.IsValid(number); err != nil {
-			return err
-		}
-	}
-	return nil
-}
-
-type PhoneNumberOrSpecification struct {
-	specifications []Specification[string]
-}
-
-func (e PhoneNumberOrSpecification) IsValid(number string) error {
-	var err error
-	for _, specification := range e.specifications {
-		if err = specification.IsValid(number); err == nil {
-			return nil
-		}
-	}
-	return err
-}
-
-type PhoneNumberAndSpecification struct {
-	specifications []Specification[string]
-}
-
-func (e PhoneNumberAndSpecification) IsValid(number string) error {
-	for _, specification := range e.specifications {
-		if err := specification.IsValid(number); err != nil {
-			return err
-		}
-	}
-	return nil
-}
-
-type PhoneNumberRussianRequiredValueValidation struct{}
-
-func (e PhoneNumberRussianRequiredValueValidation) IsValid(phone string) error {
-	emailRegex := regexp.MustCompile(`^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}$`)
-	if !emailRegex.MatchString(phone) {
-		return EmailRequiredValueErr{}
-	} else {
-		return nil
-	}
-}
-
-type LoginSpecification struct {
-	specifications []Specification[string]
-}
-
-func (e LoginSpecification) IsValid(login string) error {
-	for _, specification := range e.specifications {
-		if err := specification.IsValid(login); err != nil {
-			return err
-		}
-	}
-	return nil
-}
-
-type LoginAndSpecification struct {
-	specifications []Specification[string]
-}
-
-func (e LoginAndSpecification) IsValid(login string) error {
-	for _, specification := range e.specifications {
-		if err := specification.IsValid(login); err != nil {
-			return err
-		}
-	}
-	return nil
-}
-
-type LoginAcceptableValuesValidation struct {
-	NonAcceptableValues map[rune]bool
-}
-
-func (e LoginAcceptableValuesValidation) IsValid(email string) error {
-	for char := range e.NonAcceptableValues {
-		if e.NonAcceptableValues[char] {
-			return nil
-		}
-	}
-	return LoginAcceptableValuesErr{e.NonAcceptableValues}
-}
-
-type LoginLengthValidation struct {
+type TitleLengthValidation struct {
 	minLength uint
 	maxLength uint
 }
 
-func (e LoginLengthValidation) IsValid(login string) error {
-	if e.minLength < uint(len(login)) && e.maxLength < uint(len(login)) {
-		return LoginMaxLengthErr{e.maxLength}
+func (e TitleLengthValidation) IsValid(title string) error {
+	if e.minLength < uint(len(title)) && e.maxLength < uint(len(title)) {
+		return TitleMaxLengthErr{e.maxLength}
 	}
-	if e.minLength < uint(len(login)) && e.maxLength < uint(len(login)) {
-		return LoginMinLengthErr{e.minLength}
+	if e.minLength < uint(len(title)) && e.maxLength < uint(len(title)) {
+		return TitleMinLengthErr{e.minLength}
 	}
 	return nil
 }
 
-type FirstNameSpecification struct {
+type DescriptionSpecification struct {
 	specifications []Specification[string]
 }
 
-func (e FirstNameSpecification) IsValid(name string) error {
+func (e DescriptionSpecification) IsValid(desc string) error {
 	for _, specification := range e.specifications {
-		if err := specification.IsValid(name); err != nil {
+		if err := specification.IsValid(desc); err != nil {
 			return err
 		}
 	}
 	return nil
 }
 
-type FirstNameAndSpecification struct {
+type DescriptionAndSpecification struct {
 	specifications []Specification[string]
 }
 
-func (e FirstNameAndSpecification) IsValid(name string) error {
+func (e DescriptionAndSpecification) IsValid(desc string) error {
 	for _, specification := range e.specifications {
-		if err := specification.IsValid(name); err != nil {
+		if err := specification.IsValid(desc); err != nil {
 			return err
 		}
 	}
 	return nil
 }
 
-type FirstNameLengthValidation struct {
+type DescriptionLengthValidation struct {
 	minLength uint
 	maxLength uint
 }
 
-func (e FirstNameLengthValidation) IsValid(name string) error {
-	if e.minLength < uint(len(name)) && e.maxLength < uint(len(name)) {
-		return FirstNameMaxLengthErr{e.maxLength}
+func (e DescriptionLengthValidation) IsValid(desc string) error {
+	if e.minLength <= uint(len(desc)) && e.maxLength <= uint(len(desc)) {
+		return DescriptionMaxLengthErr{e.maxLength}
 	}
-	if e.minLength < uint(len(name)) && e.maxLength < uint(len(name)) {
-		return FirstNameMinLengthErr{e.minLength}
+	if e.minLength <= uint(len(desc)) && e.maxLength <= uint(len(desc)) {
+		return DescriptionMinLengthErr{e.minLength}
 	}
 	return nil
 }
 
-type SecondNameSpecification struct {
+type ImagesSpecification struct {
 	specifications []Specification[string]
 }
 
-func (e SecondNameSpecification) IsValid(name string) error {
+func (e ImagesSpecification) IsValid(image string) error {
 	for _, specification := range e.specifications {
-		if err := specification.IsValid(name); err != nil {
+		if err := specification.IsValid(image); err != nil {
 			return err
 		}
 	}
 	return nil
 }
 
-type SecondNameAndSpecification struct {
+type ImagesAndSpecification struct {
 	specifications []Specification[string]
 }
 
-func (e SecondNameAndSpecification) IsValid(name string) error {
+func (e ImagesAndSpecification) IsValid(image string) error {
 	for _, specification := range e.specifications {
-		if err := specification.IsValid(name); err != nil {
+		if err := specification.IsValid(image); err != nil {
 			return err
 		}
 	}
 	return nil
 }
 
-type SecondNameLengthValidation struct {
-	minLength uint
-	maxLength uint
-}
-
-func (e SecondNameLengthValidation) IsValid(name string) error {
-	if e.minLength < uint(len(name)) && e.maxLength < uint(len(name)) {
-		return SecondNameMaxLengthErr{e.maxLength}
-	}
-	if e.minLength < uint(len(name)) && e.maxLength < uint(len(name)) {
-		return SecondNameMinLengthErr{e.minLength}
-	}
-	return nil
-}
-
-type PatronimicSpecification struct {
-	specifications []Specification[string]
-}
-
-func (e PatronimicSpecification) IsValid(name string) error {
-	for _, specification := range e.specifications {
-		if err := specification.IsValid(name); err != nil {
-			return err
-		}
-	}
-	return nil
-}
-
-type PatronimicAndSpecification struct {
-	specifications []Specification[string]
-}
-
-func (e PatronimicAndSpecification) IsValid(name string) error {
-	for _, specification := range e.specifications {
-		if err := specification.IsValid(name); err != nil {
-			return err
-		}
-	}
-	return nil
-}
-
-type PatronimicLengthValidation struct {
-	minLength uint
-	maxLength uint
-}
-
-func (e PatronimicLengthValidation) IsValid(name string) error {
-	if e.minLength <= uint(len(name)) && e.maxLength <= uint(len(name)) {
-		return PatronimicMaxLengthErr{e.maxLength}
-	}
-	if e.minLength <= uint(len(name)) && e.maxLength <= uint(len(name)) {
-		return PatronimicMinLengthErr{e.minLength}
-	}
-	return nil
-}
-
-type AvatarSpecification struct {
-	specifications []Specification[string]
-}
-
-func (e AvatarSpecification) IsValid(name string) error {
-	for _, specification := range e.specifications {
-		if err := specification.IsValid(name); err != nil {
-			return err
-		}
-	}
-	return nil
-}
-
-type AvatarAndSpecification struct {
-	specifications []Specification[string]
-}
-
-func (e AvatarAndSpecification) IsValid(name string) error {
-	for _, specification := range e.specifications {
-		if err := specification.IsValid(name); err != nil {
-			return err
-		}
-	}
-	return nil
-}
-
-type AvatarWeightValidation struct {
+type ImagesWeightValidation struct {
+	minImages    uint
+	maxImages    uint
 	maxImageSize uint
 }
 
-func (e AvatarWeightValidation) IsValid(avatar string) error {
-	if avatar == "" {
+func (e ImagesWeightValidation) IsValid(image string) error {
+	if image == "" {
 		return nil
 	}
-	dst := make([]byte, base64.StdEncoding.DecodedLen(len(avatar)))
-	n, err := base64.StdEncoding.Decode(dst, []byte(avatar))
+	dst := make([]byte, base64.StdEncoding.DecodedLen(len(image)))
+	n, err := base64.StdEncoding.Decode(dst, []byte(image))
 	if err != nil {
 		return err
 	}
 	if n > int(e.maxImageSize) {
-		return AvatarWeightErr{e.maxImageSize}
+		return ImageWeightErr{e.maxImageSize}
+	}
+	return nil
+}
+
+type TagsSpecification struct {
+	specifications []Specification[string]
+}
+
+func (e TagsSpecification) IsValid(tags string) error {
+	for _, specification := range e.specifications {
+		if err := specification.IsValid(tags); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+type TagsAndSpecification struct {
+	specifications []Specification[string]
+}
+
+func (e TagsAndSpecification) IsValid(tags string) error {
+	for _, specification := range e.specifications {
+		if err := specification.IsValid(tags); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+type TagsLengthValidation struct {
+	minLength uint
+	maxLength uint
+}
+
+func (e TagsLengthValidation) IsValid(tags string) error {
+	if e.minLength <= uint(len(tags)) && e.maxLength <= uint(len(tags)) {
+		return DescriptionMaxLengthErr{e.maxLength}
+	}
+	if e.minLength <= uint(len(tags)) && e.maxLength <= uint(len(tags)) {
+		return DescriptionMinLengthErr{e.minLength}
 	}
 	return nil
 }
